# MakeChoice

./: .env  Dockerfile  Makefile  README.md  digest.txt  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml
migrations/: env.py
migrations/versions/: 2475dc0cabff_initial_schema.py  2b6c7d9cfbba_extend_electives.py  5d90ac5b7342_seed_initial_courses_data.py  73aa2ca4cc14_populate_courses_with_bs1_and_bs2_and_.py  bcacd8abee0d_seed_fake_choices.py  d8497dd06814_update_role_system.py  daf4585226fb_seed_fake_students.py
mock_sso/: Dockerfile  app.py  requirements.txt
src/: README.md  config.py  logging.py  main.py
src/api/: README.md  app.py  dependencies.py  error_handler.py  models.py
src/api/models/: selection.py
src/api/routers/: __init__.py  auth.py  choices.py  courses.py  electives.py  user.py
src/domain/: README.md  exceptions.py  unit_of_work.py
src/domain/entities/: __init__.py  choice.py  course.py  elective.py  user.py
src/domain/repositories/: __init__.py  abstract_choice_repository.py  abstract_course_repository.py  abstract_elective_repository.py  abstract_user_repository.py  choice_repository.py  course_repository.py  user_repository.py
src/infrastructure/: README.md
src/infrastructure/db/: models.py  session.py  uow.py
src/infrastructure/db/repositories/: __init__.py  choice_repo.py  course_repo.py  elective_repo.py  (+1 more)
src/infrastructure/sso/: innopolis_oidc.py
src/services/: __init__.py  choice_service.py  course_service.py  elective_service.py  user_service.py
templates/: index.html
test_data/: courses.csv
